fixed off center github link in the header in the mobile view

--- a/leaveanote/leaveanote.css
+++ b/leaveanote/leaveanote.css
@@ -289,6 +289,10 @@ footer {
 		float: none;
 	}
 
+	.header .header-links a {
+		margin-left: 40%;
+	}
+
 	.stickynote.notebox {
 		width: 256px;
 		height: auto;
